--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.10-alpine3.14
-WORKDIR /app
+
 RUN apk add --no-cache --update make
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-COPY . /app
+
+WORKDIR .
 CMD ["gunicorn", "server:app", "--bind", "0.0.0.0:5000"]
