--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
   app:
     build:
-      context: .
-      dockerfile: app/Dockerfile
+      context: app/
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
   redis:
