Implemented Timeseries App

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
+    volumes:
+      - sqlite_data:/sqlite_data
   redis:
     image: "redis:alpine"
-
     volumes:
       - redis_data:/data
 
@@ -19,3 +20,9 @@ volumes:
       type: 'none'
       o: 'bind'
       device: './redis_data'
+  sqlite_data:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: './sqlite_data'
